# epistatsrd

./: .flake8  .gitignore  CNAME  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  pyproject.toml  pytest.ini
app/core/: settings.py
app/frontend/: index.html  package.json
app/frontend/src/: App.tsx  style.css
app/frontend/src/assets/: d3test.ts
app/frontend/src/components/: Axis.tsx  Line.tsx  TimeSeries.tsx  index.ts
app/frontend/src/hooks/: index.ts  useDimensions.ts  useFilter.ts
app/frontend/src/types/: d3.ts  index.ts
app/frontend/src/utils/: download.ts
app/schemas/: boletin.py
app/scraper/: boletines.py
app/utils/: dir.py  download.py
assets/: index-04d55915.css  index-36fef66b.css  index-3985e09a.css  index-426ffa6b.js  index-44f80da7.js  index-5a204d5e.js  index-8999a7f5.js  index-93556f2f.css  index-a6e1ff27.js  index-d7646d06.css  index.034b0f3c.js  index.20eca249.js  index.36770604.js  index.561bcd66.css  index.6c0bc5a1.css  index.b365999a.css
docker/: Dockerfile
page/: index.html  package.json  vite.config.ts
page/src/: App.tsx  index.css  styles.css
page/src/assets/: COL.csv  DEN.csv  DRSVGMap.tsx  LEP.csv  MAL.csv  MMI.csv  cov.csv  dengue.csv  leptospirosis.csv  mmi.csv  provincias.ts
page/src/components/: About.tsx  Axis.tsx  DateHistogram.tsx  DateLineBrush.tsx  DownloadButton.tsx  Line.tsx  Navbar.tsx  SVGChart.tsx  TimeSeries.tsx  TimeSeriesContainer.tsx  TimeSeriesViz.tsx  VizContainer.tsx  index.ts
page/src/hooks/: index.ts  useAccessors.ts  useColorScale.ts  useData.ts  useDimensions.ts  useFilter.ts  useScales.ts  useSumBy.ts
page/src/types/: d3.ts  datasets.ts  index.ts
page/src/utils/: aggregation.ts  download.ts  index.ts  locale.ts  variables.ts
tests/unit/: test_boletines.py
