[tool.poetry]
name = "epistatsrd"
version = "0.1.0"
description = "Datos y visualizaciones de salud pública en la República Dominicana."
authors = ["Luis José Rodríguez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "0.81.0"
pydantic = {version = "1.10.1", extras = ["dotenv", "email"]}
python-dateutil = "2.8.2"
requests = "2.28.1"
xmltodict = "0.13.0"

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
flake8 = "5.0.4"
isort = "5.10.1"
mypy = "0.971"

[tool.poetry.group.mypy.dependencies]
types-python-dateutil = "2.8.19"
types-requests = "2.28.9"

[tool.poetry.group.test.dependencies]
pytest = "7.1.3"
pytest-clarity = "1.0.1"
pytest-cov = "3.0.0"
pytest-sugar = "0.9.5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["app", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"