[tool.poetry]
name = "epistatsrd"
version = "0.1.0"
description = "Datos y visualizaciones de salud pública en la República Dominicana."
authors = [
    "Luis José Rodríguez <luijorod@gmail.com>",
    "Andreina Martínez Paulino <andreina.martinez08@gmail.com>"
]
homepage = "http://www.epistatsrd.com/"
repository = "https://github.com/luijorod/EpiStatsRD"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
camelot-py = "0.10.1"
fastapi = "0.85.0"
gunicorn = "20.1.0"
pydantic = {version = "1.10.2", extras = ["dotenv", "email"]}
python-dateutil = "2.8.2"
requests = "2.28.1"
setuptools = "65.5.0"
xmltodict = "0.13.0"
uvicorn = "0.18.3"
# Camelot
ghostscript = "0.7"
opencv-python-headless = "4.6.0.66"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
flake8 = "5.0.4"
isort = "5.10.1"
mypy = "0.982"
pytest = "7.1.3"
pytest-clarity = "1.0.1"
pytest-cov = "4.0.0"
pytest-sugar = "0.9.5"
types-python-dateutil = "2.8.19"
types-requests = "2.28.11.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["app", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"